* Made application.groovy locatable by Environment variable  "SEARCH_CONFIG_PATH"